--- a/payment.html
+++ b/payment.html
@@ -19,17 +19,12 @@
   src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg">
 </audio>
 
-<div class="
-  max-w-6xl mx-auto
-  grid grid-cols-1 gap-3
-  md:grid-cols-12 md:gap-4
-">
+<div class="max-w-6xl mx-auto grid grid-cols-1 gap-3 md:grid-cols-12 md:gap-4">
 
   <!-- โต๊ะ -->
   <div class="md:col-span-3 bg-slate-800 rounded-xl p-3">
     <h2 class="font-bold mb-3 text-lg">🪑 โต๊ะที่พร้อมคิดเงิน</h2>
-    <div
-      id="tableList"
+    <div id="tableList"
       class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-1 gap-2">
     </div>
   </div>
@@ -88,7 +83,7 @@ const sb = supabase.createClient(
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
 )
 
-const PROMPTPAY_ID = "0936494961"
+const PROMPTPAY_ID = "0869525072"
 
 /* ================= SOUND AUTO UNLOCK ================= */
 const paySound = document.getElementById("paySound")
@@ -101,12 +96,10 @@ function unlockSoundOnce() {
       paySound.pause()
       paySound.currentTime = 0
       soundUnlocked = true
-      console.log("🔊 Sound unlocked")
     })
     .catch(() => {})
 }
 
-// แตะอะไรก็ได้ครั้งแรก = เปิดเสียง
 document.addEventListener("click", unlockSoundOnce, { once: true })
 document.addEventListener("touchstart", unlockSoundOnce, { once: true })
 
@@ -118,7 +111,7 @@ let tableMap = {}
 
 /* ================= MASTER ================= */
 async function loadProducts() {
-  const { data } = await sb.from("products").select("id,name,price")
+  const { data } = await sb.from("products").select("id,name")
   ;(data || []).forEach(p => productMap[p.id] = p)
 }
 
@@ -166,7 +159,7 @@ async function loadBillByTable(tableId) {
   for (const o of orders || []) {
     const { data: items } = await sb
       .from("order_items")
-      .select("product_id,qty")
+      .select("product_id,qty,price")
       .eq("order_id", o.id)
       .eq("status", "done")
 
@@ -174,14 +167,14 @@ async function loadBillByTable(tableId) {
       const p = productMap[it.product_id]
       if (!p) return
 
-      const price = p.price * it.qty
-      total += price
+      const rowTotal = it.price * it.qty
+      total += rowTotal
 
       const div = document.createElement("div")
       div.className = "flex justify-between border-b border-slate-700 py-1"
       div.innerHTML = `
         <div>${p.name} x ${it.qty}</div>
-        <div>${price} บาท</div>
+        <div>${rowTotal} บาท</div>
       `
       billItems.appendChild(div)
     })
@@ -231,7 +224,6 @@ payBtn.onclick = async () => {
     .update({ status: "available" })
     .eq("id", currentTableId)
 
-  // 🔔 เสียงตอนชำระเงินสำเร็จ
   if (soundUnlocked) {
     paySound.currentTime = 0
     paySound.play().catch(()=>{})
